<resources>
    <string name="share_authority">com.pinnaclesystems.ambientviewer.ShareDataPointProvider</string>
    <string name="app_name">AmbientViewer</string>
    <string name="load_image">Select image</string>
    <string name="select_images">Select multiple</string>
    <string name="load_last">Load Last</string>
    <string name="original">Original, scale %.2f, %d lux</string>
    <string name="adapted">Adapted, scale %.2f, %d lux, param %.1f</string>
    <string name="version">Version %s</string>
    <string name="data_points">Data points: %d</string>
    <string name="send_file">Send</string>
    <string name="send_title">Send using</string>
    <string name="send_file_text">Data points from %s</string>
    <string name="enable_viewer_mode">Enable viewer mode</string>
    <string name="automatic_mode">Automatic mode: ON</string>
    <string name="manual_mode_toast">Manual mode enabled</string>
</resources>
