<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <Button
        android:id="@+id/load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/load_image"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/load_multiple_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/select_images"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintStart_toEndOf="@id/load_image"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <Button
        android:id="@+id/load_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/load_last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_image"
        android:enabled="false"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/last_file_container"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_last"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/last_file_preview"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/last_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/last_file_preview"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="start"
            android:maxLines="10"
            tools:text="/tmp/foo.bar"
            />
    </android.support.constraint.ConstraintLayout>
    
    <LinearLayout
        android:id="@+id/viewer_mode_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_file_container">
        <CheckBox
            android:id="@+id/viewer_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:labelFor="@id/viewer_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_viewer_mode"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/data_container"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewer_mode_container">
        <Button
            android:id="@+id/send_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/send_file"/>
        <TextView
            android:id="@+id/data_points_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_file"
            app:layout_constraintTop_toTopOf="@id/send_file"
            app:layout_constraintBottom_toBottomOf="@id/send_file"
            tools:text="datapoints: 30"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        tools:text="Version: A.B.C" />

</android.support.constraint.ConstraintLayout>